# Treescanner

./: .gitignore  Cargo.toml  README.md  global_hints.json  hints.json  test_target.c
.github/workflows/: ci.yml
analyzer/: Cargo.toml
analyzer/src/: main.rs  offset_inference.rs  report_template.html
common/src/: lib.rs
mutator/: Cargo.toml
mutator/src/: lib.rs
scripts/: benchmark.sh  dependency_audit.sh  run_analyzer_sandbox.sh
