[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tera = "1.20.1"
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.2"
walkdir = "2.5.0"
